syntax = "proto3";

package grpc_services_report;

option go_package = "infra/adapters/grpc/services/report/gen;";

service ReportService {
  rpc GenerateReport (ReportRequest) returns (ReportResponse);
}

message ReportRequest {
  string start_date = 1;
  string end_date = 2;
  int32 interval_minutes = 3;
  float initial_balance = 4;
  bytes trades_file = 5;
  map<string, bytes> assets_files = 6;
}

message ReportResponse {
  string message = 1;
  bytes file = 2;
}
